[tool.poetry]
name = "reconx"
version = "1.0"
description = "ReconX is a powerful and user-friendly reconnaissance tool designed for security researchers and penetration testers. It provides a comprehensive suite of features for gathering information about target domains through an intuitive graphical interface."
authors = ["c0d3ninja"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
bs4 = "^0.0.2"
customtkinter = "^5.2.2"
ctkmenubar = "^0.8"
pillow = "^11.0.0"
colorama = "^0.4.6"
ipwhois = "^1.3.0"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
